从配置中心获取信息

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ server.port=1202
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.service-id=config-server
-spring.cloud.config.profile=dev
+spring.cloud.config.profile=master
 
 # 配置服务注册中心
 eureka.client.serviceUrl.defaultZone=http://localhost:10001/eureka/
